syntax = "proto3";

package todo.v1;

option go_package = "github.com/machanirobotics/grpc-mcp-gateway/v2/examples/proto/generated/go/todo/todopbv1;todopbv1";
option java_multiple_files = true;
option java_outer_classname = "TodoServiceProto";
option java_package = "com.todo.v1";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

import "mcp/protobuf/annotations.proto";
import "todo/v1/todo.proto";

// Service for managing todo items.
service TodoService {
  option (google.api.default_host) = "machanirobotics.app.todo.v1";
  option (mcp.protobuf.service) = {
    app: {
      name: "Todo App"
      version: "1.0.0"
      description: "A simple todo management application"
    }
  };

  // Creates a new todo item.
  rpc CreateTodo(CreateTodoRequest) returns (Todo) {
    option (google.api.http) = {
      post: "/v1/{parent=users/*}/todos"
      body: "todo"
    };
    option (google.api.method_signature) = "parent,todo,todo_id";
    option (mcp.protobuf.tool) = {
      description: "Creates a new todo item under a user. Requires parent (e.g. users/alice), a todo object with title/description/priority, and a unique todo_id."
    };
    option (mcp.protobuf.elicitation) = {
      message: "Please confirm the todo details before creating."
      schema: "todo.v1.CreateTodoConfirmation"
    };
  }

  // Retrieves a todo item by resource name.
  rpc GetTodo(GetTodoRequest) returns (Todo) {
    option (google.api.http) = {
      get: "/v1/{name=users/*/todos/*}"
    };
    option (google.api.method_signature) = "name";
    option (mcp.protobuf.tool) = {
      description: "Retrieves a single todo item by its resource name (e.g. users/alice/todos/abc123)."
    };
    option (mcp.protobuf.prompt) = {
      name: "summarize_todos"
      description: "Summarize all pending todo items for a user"
      schema: "todo.v1.SummarizeTodosArgs"
    };
  }

  // Lists todo items with optional filtering.
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=users/*}/todos"
    };
    option (google.api.method_signature) = "parent";
    option (mcp.protobuf.tool) = {
      description: "Lists all todo items for a user. Supports pagination via page_size and page_token."
    };
    option (mcp.protobuf.prompt) = {
      name: "prioritize_todos"
      description: "Suggest a priority ordering for a user's incomplete todos"
      schema: "todo.v1.PrioritizeTodosArgs"
    };
  }

  // Updates an existing todo item.
  rpc UpdateTodo(UpdateTodoRequest) returns (Todo) {
    option (google.api.http) = {
      patch: "/v1/{todo.name=users/*/todos/*}"
      body: "todo"
    };
    option (google.api.method_signature) = "todo,update_mask";
    option (mcp.protobuf.tool) = {
      description: "Updates an existing todo item. Send the todo with its resource name and the fields to update. Use update_mask to specify which fields to modify."
    };
    option (mcp.protobuf.elicitation) = {
      message: "Please confirm the changes to this todo item."
      schema: "todo.v1.UpdateTodoConfirmation"
    };
  }

  // Deletes a todo item by resource name.
  rpc DeleteTodo(DeleteTodoRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=users/*/todos/*}"
    };
    option (google.api.method_signature) = "name";
    option (mcp.protobuf.tool) = {
      description: "Permanently deletes a todo item by its resource name. This action cannot be undone."
    };
    option (mcp.protobuf.elicitation) = {
      message: "Are you sure you want to delete this todo? This action cannot be undone."
      schema: "todo.v1.DeleteTodoConfirmation"
    };
  }
}